@@ -614,14 +614,12 @@ readHeader(URLFile *uf, Buffer *newBuf, int thru, ParsedURL *pu)
 	if (uf->scheme == SCM_NEWS && tmp->ptr[0] == '.')
 	    Strshrinkfirst(tmp, 1);
 #endif
-#ifdef HTTP_DEBUG
-	{
+	if(w3m_reqlog){
 	    FILE *ff;
-	    ff = fopen("zzrequest", "a");
+	    ff = fopen(w3m_reqlog, "a");
 	    Strfputs(tmp, ff);
 	    fclose(ff);
 	}
-#endif				/* HTTP_DEBUG */
 	if (src)
 	    Strfputs(tmp, src);
 	cleanup_line(tmp, HEADER_MODE);
