@@ -870,7 +870,7 @@ global DownloadList *LastDL init(NULL);
 global int CurrentKey;
 global char *CurrentKeyData;
 global char *CurrentCmdData;
-
+global char *w3m_reqlog;
 extern char *w3m_version;
 
 #define DUMP_BUFFER   0x01
