@@ -1,3 +1,9 @@
+2006-12-10  noz
+
+	* [20051124052846@w3mbbs] LiveHTTPHeaders
+	* file.c, fm.h, main.c, url.c: add -reqlog option which makes
+	  ~/.w3m/request.log like LiveHTTPHeaders of FireFox.
+
 2006-08-07  Fumitoshi UKAI  <ukai@debian.or.jp>
 
 	* mailcap.c (acceptableMimeTypes): change default accept: line
